# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bluetooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
tracing = "0.1.37"
cfg-if = "1.0.0"
async-trait = "0.1"
thiserror = "1.0.43"

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Devices_Bluetooth",
    "Devices_Enumeration",
    "Devices_Bluetooth_Advertisement",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }
