[package]
name = "presence"
version = "0.1.0"

# More keys definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
env_logger = "0.11.2"
libc = "^0.2"

[build-dependencies]
cbindgen = "0.24.0"